--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,6 @@ body{
 
 }
 
-.clearfix::after {
-    content: "" ;
-    display: table;
-    clear: both;
-}
 
 img {
     width: 100%;
@@ -30,6 +25,19 @@ img {
     margin: 20px 0;
 }
 
+.layover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.txt {
+    font-size: 16px;
+    color: lightgray;
+}
 /*COMMON*/
 
 /*Wrapper start*/
@@ -48,6 +56,8 @@ img {
     width: 150px;
 }
 
+/*Menu Start*/
+
 .menu {
     list-style-type: none;
     padding: 2% 0;
@@ -55,11 +65,44 @@ img {
 
 .menu li {
     display: inline-block;
-    margin: 5px;
+    margin-right: 5px;
 }
 
 .menu a {
     text-decoration: none;
     text-transform: uppercase;
+    color: #939393;
 }
+
+/*Menu End*/
+
+/*Banner Start*/
+
+.banner {
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+    border-radius: 10px;
+}
+
+.banner img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.teaser {
+    position: absolute;
+    bottom: 10%;
+    left: 4%;
+    width: 60%;
+    color: white;
+    
+}
+
+
+/*Banner End*/
+
+
+
 /*Header End*/
