--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,18 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
 }
 
 .txt {
     font-size: 16px;
     color: lightgray;
+}
+
+.clearfix::after {
+    content: "" ;
+    display: table;
+    clear: both;
 }
 /*COMMON*/
 
@@ -82,10 +89,10 @@ img {
     position: relative;
     overflow: hidden;
     height: 500px;
-    border-radius: 10px;
+   
 }
 
-.banner img {
+.obj_fit {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -103,6 +110,42 @@ img {
 
 /*Banner End*/
 
-
-
 /*Header End*/
+
+
+/*Main Start*/
+
+.title h2 {
+    font-size: xx-large;
+}
+
+
+.col {
+    position: relative;
+    float: left;
+    margin-bottom: 10px;
+}
+
+
+
+.left_col, .right_col {
+    width: 20%;
+}
+
+.middle_col {
+    width: 58%;
+    margin: 0 1%;
+
+}
+
+.col_img {
+    position: relative;
+    height: 200px;
+}
+
+h4, p {
+    margin-top: 20px;
+}
+
+
+/*Main End*/
